# rxing-bindings

./: Cargo.toml
src/: barcode_format.rs  encode.rs
