[package]
edition = "2021"
name = "rxing"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.6", default-features = false, features = ["napi4"] }
napi-derive = "2.16.5"
image = "0.25.1"
rxing = {version = "~0.5.10", features = ["image", "svg_read", "svg_write"] }
data-url = "0.3.1"
base64 = "0.22.1"

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
